tests/NormalTests/paczka1/fuzzy1/78892363.err
Error in line 1: 0dsndBr A170 4,0
Error in line 3: W0xf4 A170 74,1
Error in line 10: VL5MKAZFN1 A279 91,4
Error in line 32: S269 S269 46,5
